# py_nadc

./: LICENSE  README.MD  pyproject.toml  setup.cfg
src/py_nadc/: __init__.py  py_nadc.py
src/py_nadc_yuripassuelo.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pynad/: __init__.py  pynad.py
src/pynad_yuripassuelo.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: Testes.py
