[metadata]
name = pynad-yuripassuelo
version = 0.0.4
author = Yuri Passuelo
author_email = yuri.mpassuelo@gmail.com
description = Pacote para acesso aos microdados Trimestrais da PNAD
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yuripassuelo/pynad
project_urls = 
	Bug Tracker = https://github.com/yuripassuelo/pynad/issues
classifiers = 
	Programming Language :: Python :: 3
	Operating System :: OS Independent

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[egg_info]
tag_build = 
tag_date = 0

